--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
 
           <li>
-            <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
+            <a href="#blog" class="navbar-link" data-nav-link>Tutoriales</a>
           </li>
 
           <li>
