--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <p class="section-subtitle">La mejor aplicación de Crowd Factoring</p>
 
-            <h1 class="h1 hero-title">Descubre el futuro de las inversiones con FACTUREPLUS</h1>
+            <h1 class="h1 hero-title">Crecimiento a tu alcance, inversión a tu medida</h1>
 
             <p class="section-text">
               Multiplica tu dinero colaborando con la multitud en nuestra app de Crowd Factoring Digital
